--- a/packages/iter/package.json
+++ b/packages/iter/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@esfx/iter",
-    "version": "1.0.0-pre.17",
+    "version": "1.0.0-pre.18",
     "description": "An iteration and query API for ECMAScript iterables.",
     "types": "index",
     "main": "dist",
@@ -8,9 +8,6 @@
     "exports": {
         ".": "./dist/index.js",
         "./": "./dist/"
-    },
-    "scripts": {
-        "prepare": "generate-export-map"
     },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
@@ -33,16 +30,17 @@
         "@esfx/internal-assert": "^1.0.0-pre.17",
         "@esfx/internal-binarysearch": "^1.0.0-pre.17",
         "@esfx/internal-guards": "^1.0.0-pre.17",
-        "@esfx/iter-fn": "^1.0.0-pre.17",
-        "@esfx/iter-grouping": "^1.0.0-pre.17",
+        "@esfx/iter-fn": "^1.0.0-pre.18",
+        "@esfx/iter-grouping": "^1.0.0-pre.18",
         "@esfx/iter-hierarchy": "^1.0.0-pre.17",
-        "@esfx/iter-lookup": "^1.0.0-pre.17",
+        "@esfx/iter-lookup": "^1.0.0-pre.18",
         "@esfx/iter-ordered": "^1.0.0-pre.17",
         "@esfx/iter-page": "^1.0.0-pre.17",
-        "@esfx/iter-query": "^1.0.0-pre.17",
+        "@esfx/iter-query": "^1.0.0-pre.18",
         "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
-    }
+    },
+    "gitHead": "42fb2dbf38d870b7131276e5f73764ec3dcf14a5"
 }
