--- a/package.json
+++ b/package.json
@@ -21,22 +21,24 @@
     "@microsoft/api-extractor": "7.7.12",
     "@microsoft/api-extractor-model": "7.7.10",
     "@microsoft/tsdoc": "0.12.19",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
     "@types/graceful-fs": "^4.1.4",
+    "@types/jest": "^26.0.9",
+    "@types/node": "^14.14.41",
+    "@types/node-fetch": "^2.5.10",
     "chalk": "^2.4.2",
     "del": "^3.0.0",
+    "extract-zip": "^2.0.1",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "jest": "^26.6.3",
     "js-yaml": "^3.13.1",
     "lerna": "^3.22.1",
+    "node-fetch": "^2.6.1",
     "prompts": "^2.4.0",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.0",
     "yargs": "^16.2.0",
     "yargs-unparser": "^2.0.0"
-  },
-  "dependencies": {}
+  }
 }
