--- a/internal/collections-hash/package.json
+++ b/internal/collections-hash/package.json
@@ -2,8 +2,13 @@
     "name": "@esfx/internal-collections-hash",
     "version": "1.0.0-pre.17",
     "description": "This package provides internal utilities for @esfx and is not intended for use in user-code.",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "type": "commonjs",
+    "exports": {
+        "./dist/hashData": "./dist/hashData.js",
+        "./dist/hashData.js": "./dist/hashData.js",
+        "./dist/primes": "./dist/primes.js",
+        "./dist/primes.js": "./dist/primes.js"
+    },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "repository": {
@@ -14,8 +19,7 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "@esfx/equatable": "^1.0.0-pre.17",
-        "@esfx/internal-integers": "^1.0.0-pre.17"
+        "@esfx/equatable": "^1.0.0-pre.17"
     },
     "publishConfig": {
         "access": "public"
