--- a/internal/tag/package.json
+++ b/internal/tag/package.json
@@ -2,8 +2,10 @@
     "name": "@esfx/internal-tag",
     "version": "1.0.0-pre.6",
     "description": "This package provides internal utilities for &#39;@esfx&#39; and is not intended for use in user-code.",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "type": "commonjs",
+    "main": "./dist/index.js",
+    "exports": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "repository": {
