--- a/internal/ts-worker/package.json
+++ b/internal/ts-worker/package.json
@@ -2,9 +2,11 @@
     "name": "@esfx/internal-ts-worker",
     "version": "1.0.0-pre.17",
     "description": "This package provides internal utilities for '@esfx' and is not intended for use in user-code.",
+    "type": "commonjs",
     "private": true,
-    "main": "dist",
-    "types": "dist",
+    "main": "./dist/index.js",
+    "exports": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "repository": {
