--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^17.0.23",
     "@types/node-fetch": "^2.5.10",
+    "benchmark": "^2.1.4",
     "chalk": "^2.4.2",
     "del": "^3.0.0",
     "diff": "^5.0.0",
@@ -33,6 +34,7 @@
     "gulp": "^4.0.2",
     "is-core-module": "^2.2.0",
     "jest": "^26.6.3",
+    "jest-performance": "^2.1.0",
     "js-yaml": "^3.13.1",
     "lerna": "^3.22.1",
     "node-fetch": "^2.6.1",
