Expose type-model test types

--- a/packages/type-model/package.json
+++ b/packages/type-model/package.json
@@ -4,8 +4,30 @@
     "description": "Utility types for TypeScript.",
     "type": "commonjs",
     "main": "./dist/index.js",
-    "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
+    "typesVersions": {
+        "*": {
+            "index": [
+                "./dist/index.d.ts"
+            ],
+            "index.js": [
+                "./dist/index.d.ts"
+            ],
+            "test": [
+                "./dist/test.d.ts"
+            ],
+            "test.js": [
+                "./dist/test.d.ts"
+            ]
+        }
+    },
+    "exports": {
+        ".": "./dist/index.js",
+        "./index": "./dist/index.js",
+        "./index.js": "./dist/index.js",
+        "./test": "./dist/test.js",
+        "./test.js": "./dist/test.js"
+    },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "repository": {
