--- a/packages/type-model/package.json
+++ b/packages/type-model/package.json
@@ -4,7 +4,7 @@
     "description": "Utility types for TypeScript.",
     "type": "commonjs",
     "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "types": "index",
     "typesVersions": {
         "*": {
             "index": [
