Change @esfx/events.Event to return a disposable subscription when called as function

--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -18,5 +18,8 @@
     "publishConfig": {
         "access": "public"
     },
+    "dependencies": {
+        "@esfx/disposable": "^1.0.0-pre.26"
+    },
     "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
 }
