--- a/packages/cancelable/package.json
+++ b/packages/cancelable/package.json
@@ -20,9 +20,6 @@
     },
     "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b",
     "dependencies": {
-        "@esfx/disposable": "^1.0.0-pre.30",
-        "@esfx/internal-deprecate": "^1.0.0-pre.24",
-        "@esfx/internal-guards": "^1.0.0-pre.23",
-        "@esfx/internal-tag": "^1.0.0-pre.19"
+        "@esfx/disposable": "^1.0.0-pre.30"
     }
 }
