Add reason to cancelable/canceltoken, add canceledWith and timeout to canceltoken, clean up

--- a/packages/cancelable-dom-shim/tsconfig.json
+++ b/packages/cancelable-dom-shim/tsconfig.json
@@ -2,10 +2,12 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "lib": ["esnext", "dom"]
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../cancelable" }
+        { "path": "../cancelable" },
+        { "path": "../cancelable-dom" },
     ]
 }
