--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "prompts": "^2.4.0",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
-    "typescript": "^4.4.0",
+    "typescript": "^4.6.1-rc",
     "yargs": "^16.2.0",
     "yargs-unparser": "^2.0.0"
   }
