--- a/packages/cancelable-dom-shim/package.json
+++ b/packages/cancelable-dom-shim/package.json
@@ -16,7 +16,8 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "@esfx/cancelable": "^1.0.0-pre.30"
+        "@esfx/cancelable": "^1.0.0-pre.30",
+        "@esfx/cancelable-dom": "^1.0.0-pre.30"
     },
     "publishConfig": {
         "access": "public"
