--- a/packages/cancelable-dom/tsconfig.json
+++ b/packages/cancelable-dom/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "lib": ["esnext", "dom"]
     },
     "include": ["src/**/*.ts"],
     "references": [
