--- a/internal/tsconfig.json
+++ b/internal/tsconfig.json
@@ -7,6 +7,7 @@
         { "path": "./assert" },
         { "path": "./binarysearch" },
         { "path": "./collections-hash" },
+        { "path": "./linked-list" },
         { "path": "./deprecate" },
         { "path": "./guards" },
         { "path": "./jest-sequence" },
