--- a/packages/async-conditionvariable/tsconfig.json
+++ b/packages/async-conditionvariable/tsconfig.json
@@ -8,6 +8,7 @@
     "references": [
         // devDependencies:
         { "path": "../async-mutex" },
+        { "path": "../../internal/linked-list" },
 
         // dependencies:
         { "path": "../async-lockable" },
