More dependency cleanup in 'async-*'

--- a/packages/async-conditionvariable/package.json
+++ b/packages/async-conditionvariable/package.json
@@ -16,12 +16,11 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "scripts": {
-        "bundle": "esbuild src/index.ts --bundle --platform=node --outdir=dist --format=cjs --external:@esfx/cancelable --external:@esfx/async-lockable --external:@esfx/async-mutex --external:tslib --sourcemap"
+        "bundle": "node esbuild.cjs"
     },
     "dependencies": {
         "@esfx/async-lockable": "^1.0.0-pre.30",
-        "@esfx/cancelable": "^1.0.0-pre.30",
-        "tslib": "^2.1.0"
+        "@esfx/cancelable": "^1.0.0-pre.30"
     },
     "devDependencies": {
         "@esfx/async-mutex": "^1.0.0-pre.30",
