--- a/packages/async-autoresetevent/package.json
+++ b/packages/async-autoresetevent/package.json
@@ -20,8 +20,7 @@
     },
     "dependencies": {
         "@esfx/async-waitqueue": "^1.0.0-pre.30",
-        "@esfx/cancelable": "^1.0.0-pre.30",
-        "tslib": "^2.1.0"
+        "@esfx/cancelable": "^1.0.0-pre.30"
     },
     "publishConfig": {
         "access": "public"
