--- a/packages/async-mutex/package.json
+++ b/packages/async-mutex/package.json
@@ -19,8 +19,7 @@
         "@esfx/async-lockable": "^1.0.0-pre.30",
         "@esfx/async-waitqueue": "^1.0.0-pre.30",
         "@esfx/cancelable": "^1.0.0-pre.30",
-        "@esfx/disposable": "^1.0.0-pre.30",
-        "tslib": "^2.1.0"
+        "@esfx/disposable": "^1.0.0-pre.30"
     },
     "publishConfig": {
         "access": "public"
