--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -30,9 +30,25 @@
         "@esfx/async-queue": "^1.0.0-pre.30",
         "@esfx/async-readerwriterlock": "^1.0.0-pre.30",
         "@esfx/async-semaphore": "^1.0.0-pre.30",
-        "@esfx/async-stack": "^1.0.0-pre.30",
-        "tslib": "^2.1.0"
+        "@esfx/async-stack": "^1.0.0-pre.30"
     },
+    "bundledDependencies": [
+        "@esfx/async-autoresetevent",
+        "@esfx/async-barrier",
+        "@esfx/async-canceltoken",
+        "@esfx/async-conditionvariable",
+        "@esfx/async-countdown",
+        "@esfx/async-deferred",
+        "@esfx/async-delay",
+        "@esfx/async-lazy",
+        "@esfx/async-lockable",
+        "@esfx/async-manualresetevent",
+        "@esfx/async-mutex",
+        "@esfx/async-queue",
+        "@esfx/async-readerwriterlock",
+        "@esfx/async-semaphore",
+        "@esfx/async-stack"
+    ],
     "publishConfig": {
         "access": "public"
     },
