Updates to build script

--- a/packages/cancelable/package.json
+++ b/packages/cancelable/package.json
@@ -15,11 +15,11 @@
     "bugs": {
         "url": "https://github.com/esfx/esfx/issues"
     },
+    "dependencies": {
+        "@esfx/disposable": "^1.0.0-pre.30"
+    },
     "publishConfig": {
         "access": "public"
     },
-    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b",
-    "dependencies": {
-        "@esfx/disposable": "^1.0.0-pre.30"
-    }
+    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
 }
