--- a/packages/async-conditionvariable/tsconfig.json
+++ b/packages/async-conditionvariable/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "emitDeclarationOnly": true
     },
     "include": ["src/**/*.ts"],
     "references": [
