--- a/packages/collections-hashset/tsconfig.json
+++ b/packages/collections-hashset/tsconfig.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "rootDir": "src",
         "outDir": "dist",
-        "emitDeclarationOnly": true
+        "emitDeclarationOnly": true,
+        "declarationDir": "dist"
     },
     "include": ["src/**/*.ts"],
     "references": [
