--- a/packages/collections/tsconfig.json
+++ b/packages/collections/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "importHelpers": false
     },
     "include": ["src/**/*.ts"],
     "references": [
