Add naive inliner/tree shaker as custom transformer

--- a/packages/collections-linkedlist/package.json
+++ b/packages/collections-linkedlist/package.json
@@ -17,8 +17,7 @@
     },
     "dependencies": {
         "@esfx/collection-core": "^1.0.0-pre.24",
-        "@esfx/equatable": "^1.0.0-pre.19",
-        "@esfx/internal-guards": "^1.0.0-pre.23"
+        "@esfx/equatable": "^1.0.0-pre.19"
     },
     "publishConfig": {
         "access": "public"
