--- a/internal/collections-hash/package.json
+++ b/internal/collections-hash/package.json
@@ -3,12 +3,8 @@
     "version": "1.0.0-pre.19",
     "description": "This package provides internal utilities for @esfx and is not intended for use in user-code.",
     "type": "commonjs",
-    "exports": {
-        "./dist/hashData": "./dist/hashData.js",
-        "./dist/hashData.js": "./dist/hashData.js",
-        "./dist/primes": "./dist/primes.js",
-        "./dist/primes.js": "./dist/primes.js"
-    },
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "repository": {
