--- a/packages/collections-multimap/package.json
+++ b/packages/collections-multimap/package.json
@@ -19,8 +19,7 @@
         "@esfx/collection-core": "^1.0.0-pre.24",
         "@esfx/collections-hashmap": "^1.0.0-pre.24",
         "@esfx/collections-hashset": "^1.0.0-pre.24",
-        "@esfx/equatable": "^1.0.0-pre.19",
-        "@esfx/internal-guards": "^1.0.0-pre.23"
+        "@esfx/equatable": "^1.0.0-pre.19"
     },
     "publishConfig": {
         "access": "public"
