--- a/packages/collection-core/package.json
+++ b/packages/collection-core/package.json
@@ -17,6 +17,9 @@
     },
     "dependencies": {
     },
+    "devDependencies": {
+        "@esfx/internal-guards": "*"
+    },
     "publishConfig": {
         "access": "public"
     },
