--- a/packages/collections-linkedlist/tsconfig.json
+++ b/packages/collections-linkedlist/tsconfig.json
@@ -6,7 +6,11 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // dependencies
         { "path": "../collection-core" },
-        { "path": "../equatable" }
+        { "path": "../equatable" },
+
+        // devDependencies
+        { "path": "../../internal/guards" },
     ]
 }
