--- a/packages/collections-multimap/package.json
+++ b/packages/collections-multimap/package.json
@@ -21,6 +21,9 @@
         "@esfx/collections-hashset": "^1.0.0-pre.24",
         "@esfx/equatable": "^1.0.0-pre.19"
     },
+    "devDependencies": {
+        "@esfx/internal-guards": "^1.0.0-pre.23"
+    },
     "publishConfig": {
         "access": "public"
     }
