--- a/packages/collections-sortedmap/tsconfig.json
+++ b/packages/collections-sortedmap/tsconfig.json
@@ -6,8 +6,11 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // dependencies
         { "path": "../collection-core" },
         { "path": "../equatable" },
+
+        // devDependencies
         { "path": "../../internal/binarysearch" },
         { "path": "../../internal/guards" },
     ]
