--- a/packages/iter-hierarchy/package.json
+++ b/packages/iter-hierarchy/package.json
@@ -61,11 +61,13 @@
     },
     "dependencies": {
         "@esfx/equatable": "^1.0.0-pre.19",
-        "@esfx/internal-assert": "^1.0.0-pre.23",
-        "@esfx/internal-guards": "^1.0.0-pre.23",
         "@esfx/interval": "^1.0.0-pre.23",
         "@esfx/iter-ordered": "^1.0.0-pre.23",
         "tslib": "^2.1.0"
+    },
+    "devDependencies": {
+        "@esfx/internal-assert": "^1.0.0-pre.23",
+        "@esfx/internal-guards": "^1.0.0-pre.23"
     },
     "publishConfig": {
         "access": "public"
