--- a/packages/iter-ordered/tsconfig.json
+++ b/packages/iter-ordered/tsconfig.json
@@ -6,7 +6,10 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // dependencies
+        { "path": "../equatable" },
+
+        // devDependencies
         { "path": "../../internal/guards" },
-        { "path": "../equatable" }
     ]
 }
