--- a/internal/collections-hash/package.json
+++ b/internal/collections-hash/package.json
@@ -4,6 +4,7 @@
     "description": "This package provides internal utilities for @esfx and is not intended for use in user-code.",
     "type": "commonjs",
     "main": "./dist/index.js",
+    "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
