--- a/internal/threading/package.json
+++ b/internal/threading/package.json
@@ -2,6 +2,7 @@
     "name": "@esfx/internal-threading",
     "version": "1.0.0-pre.19",
     "description": "This package provides internal utilities for '@esfx' and is not intended for use in user-code.",
+    "private": true,
     "type": "commonjs",
     "main": "./dist/index.js",
     "exports": "./dist/index.js",
