--- a/packages/async-iter/package.json
+++ b/packages/async-iter/package.json
@@ -25,18 +25,28 @@
         "@esfx/collections-hashset": "^1.0.0-pre.24",
         "@esfx/equatable": "^1.0.0-pre.19",
         "@esfx/fn": "^1.0.0-pre.19",
-        "@esfx/internal-assert": "^1.0.0-pre.23",
-        "@esfx/internal-binarysearch": "^1.0.0-pre.19",
-        "@esfx/internal-guards": "^1.0.0-pre.23",
         "@esfx/iter-fn": "^1.0.0-pre.24",
         "@esfx/iter-grouping": "^1.0.0-pre.23",
         "@esfx/iter-hierarchy": "^1.0.0-pre.23",
         "@esfx/iter-lookup": "^1.0.0-pre.24",
         "@esfx/iter-ordered": "^1.0.0-pre.23",
         "@esfx/iter-page": "^1.0.0-pre.23",
-        "@esfx/iter-query": "^1.0.0-pre.24",
-        "tslib": "^2.1.0"
+        "@esfx/iter-query": "^1.0.0-pre.24"
     },
+    "bundledDependencies": [
+        "@esfx/async-iter-fn",
+        "@esfx/async-iter-hierarchy",
+        "@esfx/async-iter-ordered",
+        "@esfx/async-iter-query",
+        "@esfx/fn",
+        "@esfx/iter-fn",
+        "@esfx/iter-grouping",
+        "@esfx/iter-hierarchy",
+        "@esfx/iter-lookup",
+        "@esfx/iter-ordered",
+        "@esfx/iter-page",
+        "@esfx/iter-query"
+    ],
     "publishConfig": {
         "access": "public"
     },
