--- a/packages/async-iter/tsconfig.json
+++ b/packages/async-iter/tsconfig.json
@@ -2,13 +2,11 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "rootDir": "src",
-        "outDir": "dist"
+        "outDir": "dist",
+        "importHelpers": false
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../../internal/assert" },
-        { "path": "../../internal/binarysearch" },
-        { "path": "../../internal/guards" },
         { "path": "../collection-core" },
         { "path": "../collections-hashmap" },
         { "path": "../collections-hashset" },
