--- a/packages/collections-linkedlist/package.json
+++ b/packages/collections-linkedlist/package.json
@@ -19,6 +19,9 @@
         "@esfx/collection-core": "^1.0.0-pre.24",
         "@esfx/equatable": "^1.0.0-pre.19"
     },
+    "devDependencies": {
+        "@esfx/internal-guards": "^1.0.0-pre.23"
+    },
     "publishConfig": {
         "access": "public"
     },
