--- a/packages/collections-multimap/tsconfig.json
+++ b/packages/collections-multimap/tsconfig.json
@@ -6,9 +6,13 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // dependencies
         { "path": "../equatable" },
         { "path": "../collection-core" },
         { "path": "../collections-hashmap" },
         { "path": "../collections-hashset" },
+
+        // devDependencies
+        { "path": "../../internal/guards" },
     ]
 }
