--- a/packages/iter-lookup/tsconfig.json
+++ b/packages/iter-lookup/tsconfig.json
@@ -6,10 +6,13 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../../internal/jest-sequence" },
-        { "path": "../../internal/assert" },
+        // dependencies
         { "path": "../collections-hashmap" },
         { "path": "../equatable" },
         { "path": "../iter-grouping" },
+
+        // devDependencies
+        { "path": "../../internal/jest-sequence" },
+        { "path": "../../internal/assert" },
     ]
 }
