--- a/packages/iter-page/package.json
+++ b/packages/iter-page/package.json
@@ -16,9 +16,10 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "@esfx/internal-assert": "^1.0.0-pre.23",
-        "@esfx/iter-hierarchy": "^1.0.0-pre.23",
-        "tslib": "^2.1.0"
+        "@esfx/iter-hierarchy": "^1.0.0-pre.23"
+    },
+    "devDependencies": {
+        "@esfx/internal-assert": "^1.0.0-pre.23"
     },
     "publishConfig": {
         "access": "public"
