--- a/packages/iter-query/package.json
+++ b/packages/iter-query/package.json
@@ -15,18 +15,12 @@
     "bugs": {
         "url": "https://github.com/esfx/esfx/issues"
     },
-    "devDependencies": {
-        "@esfx/internal-jest-sequence": "^1.0.0-pre.19"
-    },
     "dependencies": {
         "@esfx/collection-core": "^1.0.0-pre.24",
         "@esfx/collections-hashmap": "^1.0.0-pre.24",
         "@esfx/collections-hashset": "^1.0.0-pre.24",
         "@esfx/equatable": "^1.0.0-pre.19",
         "@esfx/fn": "^1.0.0-pre.19",
-        "@esfx/internal-assert": "^1.0.0-pre.23",
-        "@esfx/internal-binarysearch": "^1.0.0-pre.19",
-        "@esfx/internal-guards": "^1.0.0-pre.23",
         "@esfx/interval": "^1.0.0-pre.23",
         "@esfx/iter-fn": "^1.0.0-pre.24",
         "@esfx/iter-grouping": "^1.0.0-pre.23",
@@ -35,6 +29,10 @@
         "@esfx/iter-ordered": "^1.0.0-pre.23",
         "@esfx/iter-page": "^1.0.0-pre.23",
         "tslib": "^2.1.0"
+    },
+    "devDependencies": {
+        "@esfx/internal-jest-sequence": "^1.0.0-pre.19",
+        "@esfx/internal-assert": "^1.0.0-pre.23"
     },
     "publishConfig": {
         "access": "public"
