--- a/packages/lazy/tsconfig.json
+++ b/packages/lazy/tsconfig.json
@@ -6,6 +6,9 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // depenencies
+
+        // devDepenencies
         { "path": "../../internal/guards" },
     ]
 }
