--- a/packages/threading-autoresetevent/tsconfig.json
+++ b/packages/threading-autoresetevent/tsconfig.json
@@ -6,7 +6,10 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../../internal/ts-worker" },
+        // dependencies
         { "path": "../disposable" },
+
+        // devDependencies
+        { "path": "../../internal/ts-worker" },
     ]
 }
