--- a/packages/threading-lockable/package.json
+++ b/packages/threading-lockable/package.json
@@ -16,6 +16,8 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
+    },
+    "devDependencies": {
         "@esfx/internal-guards": "^1.0.0-pre.23"
     },
     "publishConfig": {
