Add a rudimentary function inliner

--- a/packages/async-autoresetevent/tsconfig.json
+++ b/packages/async-autoresetevent/tsconfig.json
@@ -8,6 +8,7 @@
     "references": [
         // devDependencies:
         { "path": "../async-canceltoken" },
+        { "path": "../../internal/guards" },
 
         // dependencies:
         { "path": "../async-waitqueue" },
