--- a/packages/async-autoresetevent/package.json
+++ b/packages/async-autoresetevent/package.json
@@ -15,12 +15,13 @@
     "bugs": {
         "url": "https://github.com/esfx/esfx/issues"
     },
-    "devDependencies": {
-        "@esfx/async-canceltoken": "^1.0.0-pre.30"
-    },
     "dependencies": {
         "@esfx/async-waitqueue": "^1.0.0-pre.30",
         "@esfx/cancelable": "^1.0.0-pre.30"
+    },
+    "devDependencies": {
+        "@esfx/async-canceltoken": "^1.0.0-pre.30",
+        "@esfx/internal-guards": "*"
     },
     "publishConfig": {
         "access": "public"
