--- a/packages/disposable/.npmignore
+++ b/packages/disposable/.npmignore
@@ -1,8 +1,8 @@
 .vscode
+__tests__
 obj
 src
-__tests__
-internal/testUtils.*
+internal
 api-extractor.json
-tsconfig.json
-tsconfig.tsbuildinfo
+tsconfig*.json
+*.tsbuildinfo
