--- a/packages/threading/.npmignore
+++ b/packages/threading/.npmignore
@@ -1,7 +1,8 @@
 .vscode
+__tests__
 obj
 src
-__tests__
+internal
 api-extractor.json
-tsconfig.json
-tsconfig.tsbuildinfo
+tsconfig*.json
+*.tsbuildinfo
